added user related bounded context and updated spring config with appropriate beans. added user commands and updated events. create user aggregate