@@ -13,8 +13,8 @@ dependencies {
 }
 appengine {  // App Engine tasks configuration
     run {      // local (dev_appserver) configuration (standard environments only)
-        port = 8081                 // default
-//        jvmFlags = ['-XX:MaxPermSize=256M', '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=54361']
+        maxModuleInstances=1
+        jvmFlags = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=54105']
     }
 
     deploy {   // deploy configuration
